--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
 
-    <string name="app_name">Test_FiveHundred</string>
+    <string name="app_name">500px</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
 
 </resources>
