--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
-
     <string name="app_name">500px</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-
+    <string name="loading">Loading&#8230;</string>
+    <string name="popular">Popular</string>
+    <string name="editor">Editor\'s Choice</string>
+    <string name="upcoming">Upcoming</string>
+    <string name="fresh">Fresh</string>
 </resources>
