--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">500px</string>
+    <string name="app_name">500px Test</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="loading">Loading&#8230;</string>
@@ -7,4 +7,8 @@
     <string name="editor">Editor\'s Choice</string>
     <string name="upcoming">Upcoming</string>
     <string name="fresh">Fresh</string>
+    <string name="share_via">Share via</string>
+    <string name="views">Views</string>
+    <string name="votes">Votes</string>
+    <string name="favorites">Favorites</string>
 </resources>
