--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">500px Test</string>
+    <string name="app_name">500dp</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="loading">Loading&#8230;</string>
