--- a/five00dp/res/values/strings.xml
+++ b/five00dp/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">500dp</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_profile">Profile</string>
+    <string name="menu_login">Login</string>
     <string name="loading">Loading&#8230;</string>
     <string name="popular">Popular</string>
     <string name="editor">Editor\'s Choice</string>
