--- a/five00dp/res/values/strings.xml
+++ b/five00dp/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">500dp</string>
+    <string name="app_name">500dp Beta</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_profile">Profile</string>
