--- a/five00dp/res/values/strings.xml
+++ b/five00dp/res/values/strings.xml
@@ -21,4 +21,6 @@
    	<string name="login">Login</string>
    	<string name="no_name">Username?</string>
     <string name="no_password">Password?</string>
+    <string name="affection">Affection</string>
+    <string name="about">About</string>
 </resources>
