--- a/five00dp/res/values/strings.xml
+++ b/five00dp/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="no_password">Password?</string>
     <string name="affection">Affection</string>
     <string name="about">About</string>
+    <string name="comment">Comment</string>
 </resources>
